--- a/sqaure and sort array css file.html
+++ b/sqaure and sort array css file.html
@@ -1,53 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
-/* style.css */
+<!DOCTYPE html>
+<html lang="en">
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Square and Sort Array</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-.container {
-    width: 80%;
-    margin: 50px auto;
-    text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+<body>
+    <div class="container">
+        <h2>Square and Sort Array</h2>
+        <p>Enter an array of numbers (comma separated):</p>
+        <input type="text" id="inputArray" placeholder="e.g., -12, -8, -7, -5, 2, 4, 5, 11, 15">
+        <button onclick="sortedSquares()">Sort and Square</button>
+        <p id="result"></p>
+    </div>
+    <script src="script.js"></script>
+</body>
 
-h2 {
-    color: #333;
-}
-
-input {
-    padding: 10px;
-    margin: 20px 0;
-    width: 80%;
-    max-width: 500px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-button {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-
-#result {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-}
+</html>
